<resources>
    <string name="app_name">Stormcast</string>

    <!-- nav_drawer -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="nav_sub_header_forecast">FORECAST</string>
    <string name="nav_sub_header_settings">SETTINGS</string>
    <string name="action_forecast">Forecast</string>
    <string name="action_edit_locations">Edit Locations</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_rate_us">Rate us</string>
    <string name="action_version">v</string>

    <!-- fragment_add_location -->
    <string name="enter_location_name">Enter Location Name</string>
    <string name="customize">Customize</string>
    <string name="background_color">Background Color</string>
    <string name="text_color">Text Color</string>
    <string name="auto">Auto</string>
    <string name="units">Units</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="add_location">Add Location</string>

    <!-- item_forecast -->
    <string name="dash">27°C</string>
    <string name="clear">Clear</string>

    <!-- dialog_color_picker -->
    <string name="pick_a_color">Pick a color</string>

    <!-- descriptions -->
    <string name="logo_image">Logo</string>

    <!-- messages -->
    <string name="location_saved">Location Saved</string>
    <string name="invalid_location">Invalid Location</string>
    <string name="failed_to_insert_location">Failed to Insert Location</string>
    <string name="location_deleted">Location Deleted</string>
    <string name="failed_to_delete_location">Failed to Delete Location</string>
    <string name="no_locations_found_error_message">No Locations Found.</string>
</resources>
