<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/fragment_add_location_padding">

            <EditText
                android:id="@+id/location_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_edit_text"
                android:drawablePadding="15dp"
                android:drawableRight="@drawable/ic_search"
                android:focusableInTouchMode="false"
                android:hint="@string/enter_location_name"
                android:inputType="none"
                android:textColor="@color/textColorDark"
                android:textColorHint="@color/textColorDarkHint"
                android:textSize="@dimen/font_size_body">

                <requestFocus />
            </EditText>

            <com.google.android.gms.maps.MapView
                android:id="@+id/location_map_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_add_location_map_view_height"
                android:layout_below="@+id/location_edit_text"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/fragment_add_location_map_view_margin_top"
                map:liteMode="true" />

            <TextView
                android:id="@+id/customize_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location_map_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/fragment_add_location_text_view_margin_top"
                android:text="@string/customize"
                android:textColor="@color/textColorDark"
                android:textSize="@dimen/font_size_subheading" />

            <Button
                android:id="@+id/background_color_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customize_text_view"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_rounded_corners"
                android:padding="22dp"
                android:text="@string/background_color"
                android:textColor="@color/textColorLight" />

            <Button
                android:id="@+id/text_color_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/background_color_btn"
                android:layout_marginTop="@dimen/fragment_add_location_button_margin_top"
                android:background="@drawable/shape_rounded_corners"
                android:elevation="0dp"
                android:padding="22dp"
                android:text="@string/text_color"
                android:textColor="@color/textColorDark" />

            <TextView
                android:id="@+id/units_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_color_btn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/fragment_add_location_text_view_margin_top"
                android:text="@string/units"
                android:textColor="@color/textColorDark"
                android:textSize="@dimen/font_size_subheading" />

            <stormcast.app.phoenix.io.stormcast.views.tab_pills.TabPills
                android:id="@+id/units_switch_tab_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/units_text_view"
                android:layout_marginTop="@dimen/fragment_add_location_tab_pills_margin_top" />
        </RelativeLayout>
    </ScrollView>
</layout>